tests/int/snapshots/integration__int__version__version_flag_V.snap
---
source: tests/int/version.rs
info:
  program: crawk
  args:
    - "-V"
---
success: true
exit_code: 0
----- stdout -----
crawk [VERSION]

----- stderr -----
