tests/int/snapshots/integration__int__version__version_flag_version.snap
---
source: tests/int/version.rs
info:
  program: crawk
  args:
    - "--version"
---
success: true
exit_code: 0
----- stdout -----
crawk [VERSION]

Author: Bartosz Cieśla <bartosz.ciesla@gmail.com>

----- stderr -----
